Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI error ID SEMI
    5       | Specifier ExtDecList SEMI
    6       | Specifier SEMI
    7       | Specifier FunDec CompSt
    8       | Specifier FunDec SEMI

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag
   15                | STRUCT OptTag LC error RC

   16 OptTag: ID
   17       | %empty

   18 Tag: ID

   19 VarDec: ID
   20       | VarDec LB INT RB
   21       | VarDec LB error RB

   22 FunDec: ID LP VarList RP
   23       | ID LP RP

   24 VarList: ParamDec COMMA VarList
   25        | ParamDec

   26 ParamDec: Specifier VarDec

   27 CompSt: LC DefList StmtList RC

   28 StmtList: Stmt StmtList
   29         | %empty

   30 Stmt: error SEMI
   31     | Exp SEMI
   32     | CompSt
   33     | RETURN Exp SEMI
   34     | IF LP Exp RP Stmt
   35     | IF LP Exp RP Stmt ELSE Stmt
   36     | WHILE LP Exp RP Stmt
   37     | RETURN Exp error
   38     | IF LP error RP Stmt
   39     | IF LP error RP Stmt ELSE Stmt
   40     | WHILE LP error RP Stmt

   41 DefList: Def DefList
   42        | %empty

   43 Def: Specifier DecList SEMI

   44 DecList: Dec
   45        | Dec COMMA DecList

   46 Dec: VarDec
   47    | VarDec ASSIGNOP Exp

   48 Exp: Exp ASSIGNOP Exp
   49    | Exp AND Exp
   50    | Exp OR Exp
   51    | Exp RELOP Exp
   52    | Exp PLUS Exp
   53    | Exp MINUS Exp
   54    | Exp STAR Exp
   55    | Exp DIV Exp
   56    | LP Exp RP
   57    | MINUS Exp
   58    | NOT Exp
   59    | ID LP Args RP
   60    | ID LP RP
   61    | Exp LB Exp RB
   62    | Exp DOT ID
   63    | ID
   64    | INT
   65    | FLOAT
   66    | ID LP error RP
   67    | Exp LB error RB

   68 Args: Exp COMMA Args
   69     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 4 15 21 30 37 38 39 40 66 67
INT (258) 20 64
FLOAT (259) 65
ID (260) 4 16 18 19 22 23 59 60 62 63 66
TYPE (261) 11
SEMI (262) 4 5 6 8 30 31 33 43
COMMA (263) 10 24 45 68
ASSIGNOP (264) 47 48
RELOP (265) 51
PLUS (266) 52
MINUS (267) 53 57
STAR (268) 54
DIV (269) 55
AND (270) 49
OR (271) 50
DOT (272) 62
NOT (273) 58
LP (274) 22 23 34 35 36 38 39 40 56 59 60 66
RP (275) 22 23 34 35 36 38 39 40 56 59 60 66
LB (276) 20 21 61 67
RB (277) 20 21 61 67
LC (278) 13 15 27
RC (279) 13 15 27
STRUCT (280) 13 14 15
RETURN (281) 33 37
IF (282) 34 35 38 39
ELSE (283) 35 39
WHILE (284) 36 40
TAKENEGATIVE (285)
LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
Program (33)
    on left: 1, on right: 0
ExtDefList (34)
    on left: 2 3, on right: 1 2
ExtDef (35)
    on left: 4 5 6 7 8, on right: 2
ExtDecList (36)
    on left: 9 10, on right: 4 5 10
Specifier (37)
    on left: 11 12, on right: 4 5 6 7 8 26 43
StructSpecifier (38)
    on left: 13 14 15, on right: 12
OptTag (39)
    on left: 16 17, on right: 13 15
Tag (40)
    on left: 18, on right: 14
VarDec (41)
    on left: 19 20 21, on right: 9 10 20 21 26 46 47
FunDec (42)
    on left: 22 23, on right: 7 8
VarList (43)
    on left: 24 25, on right: 22 24
ParamDec (44)
    on left: 26, on right: 24 25
CompSt (45)
    on left: 27, on right: 7 32
StmtList (46)
    on left: 28 29, on right: 27 28
Stmt (47)
    on left: 30 31 32 33 34 35 36 37 38 39 40, on right: 28 34 35 36
    38 39 40
DefList (48)
    on left: 41 42, on right: 13 27 41
Def (49)
    on left: 43, on right: 41
DecList (50)
    on left: 44 45, on right: 43 45
Dec (51)
    on left: 46 47, on right: 44 45
Exp (52)
    on left: 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
    66 67, on right: 31 33 34 35 36 37 47 48 49 50 51 52 53 54 55 56
    57 58 61 62 67 68 69
Args (53)
    on left: 68 69, on right: 59 68


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 2

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag
   15                | STRUCT . OptTag LC error RC

    ID  shift, and go to state 8

    $default  reduce using rule 17 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI error ID SEMI
    5       | Specifier . ExtDecList SEMI
    6       | Specifier . SEMI
    7       | Specifier . FunDec CompSt
    8       | Specifier . FunDec SEMI

    ID    shift, and go to state 13
    SEMI  shift, and go to state 14

    ExtDecList  go to state 15
    VarDec      go to state 16
    FunDec      go to state 17


State 7

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 8

   16 OptTag: ID .
   18 Tag: ID .

    LC        reduce using rule 16 (OptTag)
    $default  reduce using rule 18 (Tag)


State 9

   13 StructSpecifier: STRUCT OptTag . LC DefList RC
   15                | STRUCT OptTag . LC error RC

    LC  shift, and go to state 18


State 10

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

   19 VarDec: ID .
   22 FunDec: ID . LP VarList RP
   23       | ID . LP RP

    LP  shift, and go to state 19

    $default  reduce using rule 19 (VarDec)


State 14

    6 ExtDef: Specifier SEMI .

    $default  reduce using rule 6 (ExtDef)


State 15

    4 ExtDef: Specifier ExtDecList . SEMI error ID SEMI
    5       | Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 20


State 16

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error RB

    COMMA  shift, and go to state 21
    LB     shift, and go to state 22

    $default  reduce using rule 9 (ExtDecList)


State 17

    7 ExtDef: Specifier FunDec . CompSt
    8       | Specifier FunDec . SEMI

    SEMI  shift, and go to state 23
    LC    shift, and go to state 24

    CompSt  go to state 25


State 18

   13 StructSpecifier: STRUCT OptTag LC . DefList RC
   15                | STRUCT OptTag LC . error RC

    error   shift, and go to state 26
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    RC  reduce using rule 42 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 28
    Def              go to state 29


State 19

   22 FunDec: ID LP . VarList RP
   23       | ID LP . RP

    TYPE    shift, and go to state 1
    RP      shift, and go to state 30
    STRUCT  shift, and go to state 2

    Specifier        go to state 31
    StructSpecifier  go to state 7
    VarList          go to state 32
    ParamDec         go to state 33


State 20

    4 ExtDef: Specifier ExtDecList SEMI . error ID SEMI
    5       | Specifier ExtDecList SEMI .

    error  shift, and go to state 34

    $end    reduce using rule 5 (ExtDef)
    TYPE    reduce using rule 5 (ExtDef)
    STRUCT  reduce using rule 5 (ExtDef)


State 21

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 35

    ExtDecList  go to state 36
    VarDec      go to state 16


State 22

   20 VarDec: VarDec LB . INT RB
   21       | VarDec LB . error RB

    error  shift, and go to state 37
    INT    shift, and go to state 38


State 23

    8 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 8 (ExtDef)


State 24

   27 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 42 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 39
    Def              go to state 29


State 25

    7 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 7 (ExtDef)


State 26

   15 StructSpecifier: STRUCT OptTag LC error . RC

    RC  shift, and go to state 40


State 27

   43 Def: Specifier . DecList SEMI

    ID  shift, and go to state 35

    VarDec   go to state 41
    DecList  go to state 42
    Dec      go to state 43


State 28

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 44


State 29

   41 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 42 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 45
    Def              go to state 29


State 30

   23 FunDec: ID LP RP .

    $default  reduce using rule 23 (FunDec)


State 31

   26 ParamDec: Specifier . VarDec

    ID  shift, and go to state 35

    VarDec  go to state 46


State 32

   22 FunDec: ID LP VarList . RP

    RP  shift, and go to state 47


State 33

   24 VarList: ParamDec . COMMA VarList
   25        | ParamDec .

    COMMA  shift, and go to state 48

    $default  reduce using rule 25 (VarList)


State 34

    4 ExtDef: Specifier ExtDecList SEMI error . ID SEMI

    ID  shift, and go to state 49


State 35

   19 VarDec: ID .

    $default  reduce using rule 19 (VarDec)


State 36

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 37

   21 VarDec: VarDec LB error . RB

    RB  shift, and go to state 50


State 38

   20 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 51


State 39

   27 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 52
    INT     shift, and go to state 53
    FLOAT   shift, and go to state 54
    ID      shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    LC      shift, and go to state 24
    RETURN  shift, and go to state 59
    IF      shift, and go to state 60
    WHILE   shift, and go to state 61

    RC  reduce using rule 29 (StmtList)

    CompSt    go to state 62
    StmtList  go to state 63
    Stmt      go to state 64
    Exp       go to state 65


State 40

   15 StructSpecifier: STRUCT OptTag LC error RC .

    $default  reduce using rule 15 (StructSpecifier)


State 41

   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error RB
   46 Dec: VarDec .
   47    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 66
    LB        shift, and go to state 22

    $default  reduce using rule 46 (Dec)


State 42

   43 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 67


State 43

   44 DecList: Dec .
   45        | Dec . COMMA DecList

    COMMA  shift, and go to state 68

    $default  reduce using rule 44 (DecList)


State 44

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 45

   41 DefList: Def DefList .

    $default  reduce using rule 41 (DefList)


State 46

   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error RB
   26 ParamDec: Specifier VarDec .

    LB  shift, and go to state 22

    $default  reduce using rule 26 (ParamDec)


State 47

   22 FunDec: ID LP VarList RP .

    $default  reduce using rule 22 (FunDec)


State 48

   24 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 31
    StructSpecifier  go to state 7
    VarList          go to state 69
    ParamDec         go to state 33


State 49

    4 ExtDef: Specifier ExtDecList SEMI error ID . SEMI

    SEMI  shift, and go to state 70


State 50

   21 VarDec: VarDec LB error RB .

    $default  reduce using rule 21 (VarDec)


State 51

   20 VarDec: VarDec LB INT RB .

    $default  reduce using rule 20 (VarDec)


State 52

   30 Stmt: error . SEMI

    SEMI  shift, and go to state 71


State 53

   64 Exp: INT .

    $default  reduce using rule 64 (Exp)


State 54

   65 Exp: FLOAT .

    $default  reduce using rule 65 (Exp)


State 55

   59 Exp: ID . LP Args RP
   60    | ID . LP RP
   63    | ID .
   66    | ID . LP error RP

    LP  shift, and go to state 72

    $default  reduce using rule 63 (Exp)


State 56

   57 Exp: MINUS . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 73


State 57

   58 Exp: NOT . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 74


State 58

   56 Exp: LP . Exp RP

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 75


State 59

   33 Stmt: RETURN . Exp SEMI
   37     | RETURN . Exp error

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 76


State 60

   34 Stmt: IF . LP Exp RP Stmt
   35     | IF . LP Exp RP Stmt ELSE Stmt
   38     | IF . LP error RP Stmt
   39     | IF . LP error RP Stmt ELSE Stmt

    LP  shift, and go to state 77


State 61

   36 Stmt: WHILE . LP Exp RP Stmt
   40     | WHILE . LP error RP Stmt

    LP  shift, and go to state 78


State 62

   32 Stmt: CompSt .

    $default  reduce using rule 32 (Stmt)


State 63

   27 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 79


State 64

   28 StmtList: Stmt . StmtList

    error   shift, and go to state 52
    INT     shift, and go to state 53
    FLOAT   shift, and go to state 54
    ID      shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    LC      shift, and go to state 24
    RETURN  shift, and go to state 59
    IF      shift, and go to state 60
    WHILE   shift, and go to state 61

    RC  reduce using rule 29 (StmtList)

    CompSt    go to state 62
    StmtList  go to state 80
    Stmt      go to state 64
    Exp       go to state 65


State 65

   31 Stmt: Exp . SEMI
   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID
   67    | Exp . LB error RB

    SEMI      shift, and go to state 81
    ASSIGNOP  shift, and go to state 82
    RELOP     shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    DOT       shift, and go to state 90
    LB        shift, and go to state 91


State 66

   47 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 92


State 67

   43 Def: Specifier DecList SEMI .

    $default  reduce using rule 43 (Def)


State 68

   45 DecList: Dec COMMA . DecList

    ID  shift, and go to state 35

    VarDec   go to state 41
    DecList  go to state 93
    Dec      go to state 43


State 69

   24 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 24 (VarList)


State 70

    4 ExtDef: Specifier ExtDecList SEMI error ID SEMI .

    $default  reduce using rule 4 (ExtDef)


State 71

   30 Stmt: error SEMI .

    $default  reduce using rule 30 (Stmt)


State 72

   59 Exp: ID LP . Args RP
   60    | ID LP . RP
   66    | ID LP . error RP

    error  shift, and go to state 94
    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    RP     shift, and go to state 95

    Exp   go to state 96
    Args  go to state 97


State 73

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   57    | MINUS Exp .
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID
   67    | Exp . LB error RB
